# robot-tests

./: .gitignore  CI-QuickStart.md  Pipfile  README-CI.md  README-test.md  README.md  interactive_console_output.xml  log.html  output.xml  playwright-log.txt  pyproject.toml  report.html  run_robot_framework.py  testrunner.bat
.github/workflows/: ci.yml
docs/: Robot-Framework-Desk-Reference-Advanced.html  Robot-Framework-Desk-Reference-Advanced.md  Robot-Framework-Desk-Reference.md  Robot-Framework-Desk-Reference2.html  Robot-Framework-Desk-Reference2.md  robot-framework-desk-reference (1).html
libs/: datastore.py
listeners/: auto_artifacts.py
resources/: shared_resources.resource
resources/api/: RestClient.robot
resources/pages/: Auth.resource
tests/: Gherkin_test.robot  __init__.robot  testsuite.robot
tests/api/: __init__.robot  echo.robot
tests/trace/: trace_video.robot
tests/ui/: login.robot
xinfo/: chokolately.txt  pipenv dryrun
