[project]
name = "robot-tests"
version = "0.0.0"
description = "Robot Framework + Browser (Playwright) course project"
requires-python = ">=3.13"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.robotidy]
transform = ["NormalizeSeparators", "RenameKeywords"]

[tool.robocop]
include = ["W", "E"]
reports = ["console"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "I"]
